fix scrollbar wide and home-section proportions

--- a/css/scrollbar.css
+++ b/css/scrollbar.css
@@ -3,7 +3,7 @@ body {
 }
 
 ::-webkit-scrollbar {
-    width: 2px;
+    width: 4px;
 }
 
 ::-webkit-scrollbar-track {
