--- a/css/style.css
+++ b/css/style.css
@@ -23,12 +23,13 @@ body {
 }
 
 button {
-    padding: 1em 2em;
+    padding: 0.8em 1.7em;
     background-color: var(--light-blue);
     color: white;
     cursor: pointer;
     border: 1px solid transparent;
-    border-radius: 30px;
+    border-radius: 1000px;
+    font-size: 1.2em;
     transition: filter 0.1s;
 }
 
@@ -85,7 +86,7 @@ h4 {
 }
 
 .logo {
-    width: 20%;
+    width: 15%;
 }
 
 .logo-active {
